Update index.html - minus 1 point button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <button onclick="changeNameTeamOne()">Submit</button>
     </div>    
     <a onclick="addPointToTeamOne()" class="btn">+1 point</a>
+    <a onclick="removePointTeamOne()" class="btn">-1 point</a>
     <h3 id="showPointsOne">0</h3>
 
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br>
 
     <h2>Team 2: <b id="teamNameTwo"></b></h2>
     <div id="inputContainerTwo">
@@ -28,6 +29,7 @@
         <button onclick="changeNameTeamTwo()">Submit</button>
     </div>   
     <a onclick="addPointToTeamTwo()" class="btn">+1 point</a>
+    <a onclick="removePointTeamTwo()" class="btn">-1 point</a>
     <h3 id="showPointsTwo">0</h3>
 
     <script src="scripts.js"></script>
